exports[`actions > project deleteProject should work 1`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > project deleteProject should work 2`] = `
Object {
  "type": "decrement outstanding requests",
}
`;

exports[`actions > project deleteProject should work 3`] = `
Array [
  Object {
    "payload": "1",
    "type": "delete project",
  },
  Object {
    "payload": Object {
      "args": Array [
        "/",
      ],
      "method": "push",
    },
    "type": "@@router/CALL_HISTORY_METHOD",
  },
]
`;

exports[`actions > project load should work 1`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > project load should work 2`] = `
Object {
  "type": "decrement outstanding requests",
}
`;

exports[`actions > project load should work 3`] = `
Array [
  Object {
    "payload": Object {
      "bounds": Object {
        "east": -76.81503295898438,
        "north": 39.02345139405932,
        "south": 38.777640223073355,
        "west": -77.25723266601562,
      },
      "bundles": Array [],
      "description": "Project description",
      "name": "Project name",
      "scenarios": Array [],
    },
    "type": "set project",
  },
  Object {
    "payload": Object {
      "lat": 38.900545808566335,
      "lon": -77.0361328125,
    },
    "type": "set map center",
  },
  Object {
    "type": "set bundles",
  },
  Object {
    "type": "set scenarios",
  },
]
`;

exports[`actions > project loadAll should work 1`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > project loadAll should work 2`] = `
Object {
  "type": "decrement outstanding requests",
}
`;

exports[`actions > project loadAll should work 3`] = `
Object {
  "payload": Array [],
  "type": "set all projects",
}
`;

exports[`actions > project save should work 1`] = `
Object {
  "payload": Object {
    "id": "1",
  },
  "type": "set project",
}
`;

exports[`actions > project save should work 2`] = `
Object {
  "type": "increment outstanding requests",
}
`;

exports[`actions > project save should work 3`] = `
Array [
  Object {
    "type": "decrement outstanding requests",
  },
]
`;

exports[`actions > project setAll should work 1`] = `
Object {
  "type": "set all projects",
}
`;
